# zero2prod

./: .env  .gitmodules  Cargo.toml  Dockerfile  README.md  logging.py  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-9441397bb395c856710d343674ee519696c45d4cd83d5c1a4203f9eb43ab0097.json  query-cb9dd09d0a6860ed6ba6f45d131372d4f233e7bd739919c9336745a9a11bc2fa.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240516163924_make_status_not_null_in_subscriptions.sql  20240516164606_create_subscriptions_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
