[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Carlos De La Cruz <me@heyimcarlos.com>"]
edition = "2021"

[lib]
# We could use a path here.
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# [[]] -> array in toml
[[bin]]
# We can only have one library, but multiple binaries.
# Workspaces help in managing multiple libraries in the same repository.
path = "src/main.rs"
name = "zero2prod"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

# Only used for testing or examples, not included in the final binary
[dev-dependencies]
reqwest = "0.12.4"
