[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Carlos De La Cruz <me@heyimcarlos.com>"]
edition = "2021"

[lib]
# We could use a path here.
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# [[]] -> array in toml
[[bin]]
# We can only have one library, but multiple binaries.
# Workspaces help in managing multiple libraries in the same repository.
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.18.1"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls" ]}

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

# Only used for testing or examples, not included in the final binary
[dev-dependencies]
fake = "2.9.2"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.117"
wiremock = "0.6.0"

[patch.crates-io]
# Patching config crate because 0.14.0 release uses yaml-rust which is unmaintained.
# Patching with master can be dangerous, if it breaks, use -> rev = "e3c1d0b452639478662a44f15ef6d5b6d969bf9b"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
